@@ -1,3 +1,7 @@
+2007-01-09  Nishio Futoshi  <fut_nis@d3.dion.ne.jp>
+
+	* src/specParse.py (getDependPackages): add method
+
 2007-01-08  Nishio Futoshi  <fut_nis@d3.dion.ne.jp>
 
 	* src/buildList.py (buildList.isBuild): quate SRPMS
